syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/GalichAnton/auth/pkg/chat_v1;chat_v1";

service ChatV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Connect(ConnectRequest) returns (stream MessageInfo);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

message ChatInfo {
  repeated string usernames = 1;
}

message CreateRequest {
  ChatInfo info = 1;
}

message CreateResponse {
  int64 id = 1;
}

message DeleteRequest {
  int64 id = 1;
}

message MessageInfo {
  string from = 1;
  string text = 2;
  google.protobuf.Timestamp sentAt = 3;
}

message SendMessageRequest {
  int64 chat_id = 1;
  MessageInfo info = 2;
}

message ConnectRequest {
  int64 chat_id = 1;
  string email = 2;
}